# reverberator

./: .gitignore  README.md  compareLnPerformance.py.test  docTest.sh  ideas.txt  inotify-simple-test.ipynb  pyproject.toml  requirements.txt  reverb_rule.tsv  reverberator.py  reverberator.service  rule.tsv  setup.py  test_backup.ipynb  test_reverb_rule.tsv  test_watcher.ipynb
.superpowers/sdd/: task-5-report.md  task-6-report.md
docs/superpowers/plans/: 2026-07-12-crash-safety-and-stepper.md
docs/superpowers/specs/: 2026-07-12-crash-safety-and-stepper-design.md
reverberator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_backup_replay_ordering.py  test_crash_safety.py
