[project]
name = "reverberator"
version = "0.1"
description = "A inotify based tool to create REVERBs (REcursive VERsioning Backup) using symlinks"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0-or-later"}
authors = [
    { name = "Yufei Pan", email = "pan@zopyr.us" },
]
homepage = "https://github.com/yufei-pan/reverberator"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "argparse>=1.4.0",
    "inotify-simple>=1.3.5",
    "multicmd>=1.29",
    "tee-logger>=6.34",
    "tsvz>=3.25",
    "xxhash>=3.5.0",
]

[project.scripts]
reverberator = "reverberator:main"
